# glsl-lsp

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md  crash-report.md  glast-issue.md
.github/workflows/: publish-glast.yml  publish-glsl-lsp.yml  publish-server.yml  publish-vscode.yml
client/: CHANGELOG.md  README.md  glsl.ast.language-configuration.json  glsl.cst.language-configuration.json  glsl.language-configuration.json  language-configuration.json  package-lock.json  package.json  tsconfig.json
client/src/: commands.ts  context.ts  extensions.ts  lsp.ts  lsp_extensions.ts  main.ts  util.ts
client/syntaxes/: glsl.cst.tmLanguage.yaml  glsl.tmLanguage.json  glsl.tmLanguage.yaml
docs/: Extension.md  Specification.md  Terminology.md  expr.bnf  grammar.bnf  lexer_grammar.bnf  spec.md
glast/: CHANGELOG.md  Cargo.toml  README.md
glast/src/: ast.rs  cst.rs  diag.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs  syntax.rs  token.rs
glast/src/cst/: parser.rs
glast/src/cst/parser/: expression.rs  printing.rs
glast/src/lexer/: preprocessor.rs
glast/src/parser/: ast.rs  conditional_eval.rs  conditional_expression.rs  expression.rs  grammar.rs  printing.rs  symbols.rs  syntax.rs  walker_tests.rs
glast/src/token/: preprocessor.rs
glsl-parser/: Cargo.toml
glsl-parser/src/: ast.rs  cst.rs  error.rs  expression.rs  lexer.rs  lib.rs  parser.rs  span.rs
glsl-parser/src/parser/: printing.rs
playground/: Cargo.toml  README.md
playground/src/: main.rs  shader.rs
server/: CHANGELOG.md  Cargo.toml  README.md
server/src/: diag.rs  extensions.rs  file.rs  lsp_extensions.rs  main.rs  semantic.rs  server.rs  state.rs  syntax.rs
src/: ast.rs  expression.rs  lexer.rs  main.rs  parser.rs  shader.rs  span.rs
