[package]
name = "glast"
version = "0.1.0"
edition = "2021"
authors = ["KubaP"]
description = "A crate for parsing and manipulating the OpenGL Shading Language."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/KubaP/glsl-lsp/tree/master/glast"
repository = "https://github.com/KubaP/glsl-lsp"
keywords = ["GLSL", "OpenGL", "parser", "ast"]
categories = ["parser-implementations", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
generational-arena = "0.2.8"
tinyvec = { version = "1.6.0", features = ["alloc", "rustc_1_57"] }
