[package]
name = "glsl-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[features]
# Debug logging to stdio. It is necessary to feature-gate this because the LSP server communicates over stdin/out,
# and printing random debug stuff breaks the communication protocol.
logging = []
