[package]
name = "glsl-lsp"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glast = { path = "../glast" }
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0", features = ["proposed"] }
serde = "1.0.139"
serde_json = "1.0.89"

[patch.crates-io]
tower-lsp = { git = "https://github.com/KubaP/tower-lsp" }