[package]
name = "glsl-lsp"
version = "0.0.2"
edition = "2021"
authors = ["KubaP"]
description = "An implementation of the Language Server Protocol for the OpenGL Shading Language."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/KubaP/glsl-lsp/tree/master/server"
repository = "https://github.com/KubaP/glsl-lsp"
keywords = ["GLSL", "OpenGL", "language server", "lsp"]
categories = ["development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.32"
glast = { path = "../glast" }
serde = "1.0.139"
serde_json = "1.0.89"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.17.0", features = ["proposed"] }
